[package]
name = "killports"
version = "0.1.0"
edition = "2021"
authors=["Rach Pradhan"]
description="Kill ports with a single command"
license = "MIT"
repository="https://github.com/justrach/killports"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
